track google analytics stats

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -26,7 +26,7 @@ instagram-profile:  # Add instagram username
 
 #-------------------------------
 # Google Analytics
-google-analytics: # Add your identifier. For example UA-99631805-1.
+google-analytics: G-K030LBEXTB # Add your identifier. For example UA-99631805-1.
 
 
 #-------------------------------
